# Black-Plague-Alchemist

./: README.md  boundedValue.py  character.py  color.py  config.py  config.toml  console.py  default_config.toml  dialogue.py  events.py  fight.py  gameClass.py  item.py  main.py  object.py  object_classes.py  place.py  pyproject.toml  skills.py  status.py  test.py  travel.py
histotree/: button.py  controllerClass.py  main.py  manager.py  node.py  structure.py  test.py  window.py
histotree/trees/: favorite_save.pkl  histo_auto_save.pkl
