[tool.poetry]
name = "black-plague-alchemist"
version = "0.1.0"
description = ""
authors = ["VinCheetah <vincent.gardies@ens-lyon.fr>, WorstFox <benjamin.duhamel@ens-lyon.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pygame = "^2.5.2"
poetry = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
